@@ -333,6 +333,9 @@ newgame.recycle=Recycle Cards
 newgame.removeplayer=Remove
 newgame.resetplayers=Reset Players
 newgame.startgame=Start Game
+newgame.timeout.10sec=10sec
+newgame.timeout.20sec=20sec
+newgame.timeout.30sec=30sec
 newgame.timeout.1min=1min
 newgame.timeout.5min=5min
 newgame.timeout.10min=10min
